--- a/src/index.css
+++ b/src/index.css
@@ -455,8 +455,8 @@ main {
 
 @media (max-width: 1024px) and (orientation: landscape) {
   .popup-content {
-    max-width: 580px; /* Keeps a larger width in landscape mode */
-    max-height: 280px; /* Limits the height */
+    max-width: 600px; /* Keeps a larger width in landscape mode */
+    max-height: 290px; /* Limits the height */
     font-size: 12px; /* Adjusts the text size */
   }
   
@@ -657,7 +657,7 @@ main {
   }
   
   .summary-box {
-    min-width: 310px; 	
+    width: 290px; 	
 	height: 280px; 
 	margin-top: auto;
   }
@@ -671,8 +671,8 @@ main {
 /* Landscape Mobile Styles */
 @media (max-width: 1024px) and (orientation: landscape) {
   .summary-box {
-    max-height: 120px; /* Reduces height for landscape mode */	
-	max-width: 590px;
+    height: 100px; /* Reduces height for landscape mode */	
+	//width: 900px;
   }
   
   .download-btn, .do-it-again-btn, .pause-play-btn{
