--- a/src/index.css
+++ b/src/index.css
@@ -483,7 +483,7 @@ main {
   }
   
   .upload-container {
-    width: 400px; /* Limits the container width */
+    width: 400px;  
 	height: 170px;
     padding: 1px; /* Reduces padding */
     margin: auto; /* Centers the container */
