--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ main {
 }
 
 .try-it-btn {
-  padding: 10px 20px; /* Adds padding to the button */
+  padding: 20px 50px; /* Adds padding to the button */
+  font-size: 16px;
   background-color: #4a5c79; /* Sets the button's background color */
   color: white; /* Sets text color to white */
   border: none; /* Removes the button's border */
