--- a/src/index.css
+++ b/src/index.css
@@ -598,25 +598,10 @@ main {
 }
 
 /* Summary Box */
-.animated-summary pre {
-  white-space: pre-wrap; /* Ensures long lines wrap */
-  word-wrap: break-word; /* Breaks long words */
-  margin: 20px auto; /* Centers the summary */
-  padding: 15px; /* Adds padding */
-  background-color: #f9f9f9; /* Light background */
-  border: 1px solid #ccc; /* Adds a border */
-  border-radius: 5px; /* Rounds the corners */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
-  font-size: 14px; /* Sets the font size */
-  text-align: left; /* Aligns the text to the left */
-  max-width: 90%; /* Ensures the box scales on smaller screens */
-  height: 300px; /* Increases height */
-  overflow-y: scroll; /* Adds vertical scrolling */
-}
 
 .summary-box {
   margin-top: 20px; /* Adds space above the summary box */
-  text-align: center; /* Centers the text */
+  text-align: left; /* Centers the text */
   position: relative; /* Positions the box relative to other elements */
   width: 590px; /* Ensures it scales on smaller screens */
   height: 250px; /* Sets a fixed height */
@@ -631,12 +616,7 @@ main {
 .summary-box-pre {
   white-space: pre-wrap; /* Ensures lines wrap */
   word-wrap: break-word; /* Breaks long words */
-  font-size: 1rem; /* Sets the font size */
   text-align: left; /* Aligns the text to the left */
-}
-
-.animated-summary {
-  padding-bottom: 50px; /* Adds extra padding at the bottom */
 }
 
 /* Button Container */
@@ -697,10 +677,6 @@ main {
   .summary-box {
     height: 90px; /* Reduces height for landscape mode */	
 	width: 530px; 
-  }
-  
-  .summary-box-pre {
-   font-size: 0.625rem; /* Sets the font size */
   }
   
   .download-btn, .do-it-again-btn, .pause-play-btn{
