--- a/src/index.css
+++ b/src/index.css
@@ -602,6 +602,7 @@ main {
 .summary-box {
   margin-top: 20px; /* Adds space above the summary box */
   text-align: left; /* Centers the text */
+  font-size: 10;
   position: relative; /* Positions the box relative to other elements */
   width: 590px; /* Ensures it scales on smaller screens */
   height: 250px; /* Sets a fixed height */
